added dynamic eval to page type

--- a/.setup/parcel/index.html
+++ b/.setup/parcel/index.html
@@ -55,7 +55,8 @@
 					"Routes": [
 						{
 							"PageType": "window.location.pathname.split('/')?.filter?.(segment => segment)?.[0] || void 0",
-							"Regex": "^(https?:\\/\\/[^\\/]+\\/?)$"
+							"Regex": "^(https?:\\/\\/[^\\/]+\\/?)$",
+							"Function": true
 						},
 						{
 							"PageType": "files",
