--- a/.setup/parcel/index.html
+++ b/.setup/parcel/index.html
@@ -31,7 +31,7 @@
 						"COOKIE_EXP_PARAMS": "xp",
 						"COOKIE_QPS": "qps",
 						"COOKIE_TARGET": "tgt",
-						"COOKIE_ORG": "org",
+						"COOKIE_ORG": "oid",
 						"COOKIE_ORG_NAME": "orgName",
 						"COOKIE_ORG_ID": "oid",
 						"COOKIE_FIRST_TIME": "first",
